--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mongodb": "^6.5.0",
     "mongoose": "^8.3.1",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nanoid": "^5.0.6",
     "uuid": "^9.0.1"
   },
