--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "nodemon ./app.js"
   },
   "dependencies": {
+    "@sendgrid/mail": "^8.1.3",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
@@ -19,7 +20,8 @@
     "mongoose": "^8.3.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "nanoid": "^5.0.6",
+    "nanoid": "^5.0.7",
+    "nodemailer": "^6.9.13",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
